# If-Script

./: Cargo.toml  Ifa.toml  README.md
.github/workflows/: ci.yml
docs/: grammar.ebnf
examples/: ase.rs  cowrie_cast.rs  divine.ifa
src/: ebo.rs  entropy.rs  error.rs  lib.rs  odu.rs  vm.rs
src/ase_vault/: mod.rs
src/calabash/: mod.rs  scaling.rs
src/compiler/: ast.rs  grammar.pest  mod.rs  parser.rs
src/cosmogram/: data.rs  mod.rs
src/hermetic/: mod.rs
src/manifesto/: mod.rs
src/odu/: mod.rs
src/odu/waves/: mod.rs  wave01.rs  wave02.rs  wave03.rs  wave04.rs  wave05.rs  wave06.rs  wave07.rs  wave08.rs  wave09.rs  wave10.rs  wave11.rs  wave12.rs  wave13.rs  wave14.rs  wave15.rs  wave16.rs
src/orisha/: mod.rs
src/receipt/: mod.rs
src/ritual_codex/: julia_bridge.rs  mod.rs
tests/: ebo_enforcement.rs  error_handling.rs  integration.rs  stack.rs
