[package]
name = "ifascript"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "IfáScript Ω — Divination as Divine Computation"
repository = "https://github.com/cryptonomicsed-byte/If-Script"
keywords = ["ifá", "esoteric", "vm", "yoruba", "divination"]
categories = ["compilers-interpreters", "no-std"]

[lib]
crate-type = ["cdylib", "lib"]  # for future WASM

[[bin]]
name = "cast_state"
path = "src/bin/cast_state.rs"

[[bin]]
name = "ifa"
path = "src/bin/ifa.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"

# Blocking HTTP for the NIST Beacon fetch — native targets only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }

# getrandom requires the "js" feature to compile for wasm32-unknown-unknown
# (pulled in transitively via rand).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
